# pokemon_showdown_data

./: .gitignore  .gitmodules  LICENSE  README.md  setup.cfg
.github/workflows/: push.yml  pylint.yml
src/: utils.py
src/datatypes/: base.py  pokemon.py
src/loaders/: __init__.py  ability_loader.py  base_loader.py  condition_loader.py  pokemon_loader.py
src/pokeshowdata.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ability_loader.py  test_condition_loader.py  test_pokemon_loader.py
