[metadata]
name = pokeshowdata
version = 0.0.1
author = Patrick McQuay
author_email = patrick.mcquay@gmail.com
description = Python Package to convert Pokemon Showdown data into Python objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tools:pytest]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]