[metadata]
name = pokeshowdata
version = 0.0.1
author = Patrick McQuay
author_email = patrick.mcquay@gmail.com
description = Python Package to convert Pokemon Showdown data into Python objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tools:pytest]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "tests"

[flake8]
ignore = D203
exclude = .git,__pycache__,env,build,dist,pokemon-showdown
max-complexity = 10

[coverage:run]
branch = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report